--- a/package.json
+++ b/package.json
@@ -2,11 +2,81 @@
   "name": "scheduler-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc",
+    "start": "NODE_ENV=production node build/server.bundle.js",
+    "build": "tsc && npm run clean:build && npm run build:client:prod && npm run build:server:prod",
+    "clean:build": "rm -rf build && mkdir build",
+    "start:client:dev": "webpack serve --config webpack/webpack.dev.config.js --mode=development",
+    "start:server:dev": "webpack --watch --progress --config webpack/webpack.server.config.js --mode=development",
+    "build:server:dev": "webpack --config webpack/webpack.server.config.js --mode=development",
+    "build:client:prod": "webpack --config webpack/webpack.prod.config.js --mode=production",
+    "build:server:prod": "webpack --config webpack/webpack.server.config.js --mode=production",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "lint-fix": "npm run lint -- --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\""
   },
   "keywords": [],
   "author": "vtalwar.w@gmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@google-cloud/storage": "^7.7.0",
+    "@mui/material": "^5.15.4",
+    "@mui/system": "^5.15.4",
+    "@react-icons/all-files": "^4.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.3",
+    "usehooks-ts": "^2.9.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.11.3",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "css-loader": "^6.9.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin": "^1.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-scss-transform": "^1.0.3",
+    "mini-css-extract-plugin": "^2.7.7",
+    "nodemon": "^3.0.2",
+    "nodemon-webpack-plugin": "^4.8.2",
+    "postcss": "^8.4.33",
+    "postcss-import": "^16.0.0",
+    "postcss-loader": "^7.3.4",
+    "postcss-preset-env": "^9.3.0",
+    "prettier": "^3.2.2",
+    "source-map-loader": "^5.0.0",
+    "style-loader": "^3.3.4",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
