--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@google-cloud/storage": "^7.7.0",
+    "@hankgalt/cloud-storage-client": "^0.0.10",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/system": "^5.15.4",
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "typescript": "^5.3.3",
     "usehooks-ts": "^2.9.4"
   },
@@ -42,6 +44,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
@@ -51,6 +54,7 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "css-loader": "^6.9.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
