--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@hankgalt/cloud-storage-client": "^0.0.10",
+    "@hankgalt/cloud-storage-client": "0.0.20",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/system": "^5.15.4",
-    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
