--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@grpc/grpc-js": "^1.9.14",
     "@hankgalt/cloud-storage-client": "0.0.20",
+    "@hankgalt/scheduler-client": "0.0.13",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/system": "^5.15.4",
     "@reduxjs/toolkit": "^2.0.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-protobuf": "^3.21.2",
     "multer": "^1.4.5-lts.1",
+    "protobufjs": "^7.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
